--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -11,7 +11,7 @@
         android:src="@drawable/dd" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/txttest"
@@ -19,7 +19,6 @@
         android:textSize="25sp"
         android:textStyle="bold"
         android:textColor="#FFFFFF"
-
         android:shadowColor="#333333"
         android:shadowDx="3"
         android:shadowDy="2"
