--- a/app/src/main/res/layout/activity_district.xml
+++ b/app/src/main/res/layout/activity_district.xml
@@ -3,24 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.DistrictActivity"
     android:background="@drawable/beerza">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView7"
-        android:textSize="@dimen/h1"
-
+    <LinearLayout
+        android:id="@+id/linearLayout6"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/text"
-        android:shadowColor="#333333"
-        android:shadowDx="3"
-        android:shadowDy="2"
-        android:shadowRadius="1"/>
+        android:background="#ff0000"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_marginBottom="520dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="New Text"
+            android:id="@+id/textView7"
+            android:textSize="@dimen/h1"
+
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/text"
+            android:shadowColor="#333333"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:layout_marginTop="5dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout4"
@@ -32,7 +44,7 @@
         android:orientation="vertical"
         android:padding="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="80dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp" >
 
