--- a/app/src/main/res/layout/activity_tour.xml
+++ b/app/src/main/res/layout/activity_tour.xml
@@ -6,21 +6,30 @@
     android:background="@drawable/beerza"
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.TourActivity">
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout7"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:text="New Text"
-        android:textColor="@color/text"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:shadowColor="#333333"
-        android:shadowDx="3"
-        android:shadowDy="2"
-        android:shadowRadius="1"
-        android:paddingLeft="120dp"
-        android:background="#ff0000" />
+        android:background="#ff0000"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_marginBottom="520dp" >
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="New Text"
+            android:textColor="@color/text"
+            android:textSize="30sp"
+            android:shadowColor="#333333"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:layout_marginTop="5dp" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/editText2"
