--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -17,42 +17,12 @@
             android:weightSum="1"
             android:background="@drawable/beerza">
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="New Text"
-                android:textColor="@color/text"
-                android:textSize="@dimen/h1"
-                android:shadowColor="#333333"
-                android:shadowDx="3"
-                android:shadowDy="2"
-                android:shadowRadius="1"
-                android:paddingLeft="120dp"
-                android:background="#1900ff" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="New Text"
-                android:textColor="@color/text"
-                android:textSize="@dimen/h2"
-                android:shadowColor="#333333"
-                android:shadowDx="3"
-                android:shadowDy="2"
-                android:shadowRadius="1"
-                android:layout_gravity="center_horizontal"
-                android:paddingLeft="120dp"
-                android:background="#ff0000" />
-
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="110dp" />
 
             <TextView
                 android:id="@+id/textView11"
@@ -67,7 +37,7 @@
                 android:shadowDx="3"
                 android:shadowDy="2"
                 android:shadowRadius="1"
-                android:background="#3700ff"
+                android:background="#ff9900"
                 android:layout_marginTop="20dp" />
 
 
@@ -79,7 +49,7 @@
                 android:padding="20dp"
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/h2"
-                android:background="#0099da"
+                android:background="#0cb900"
 
                 android:shadowColor="#333333"
                 android:shadowDx="3"
@@ -128,4 +98,55 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/linearLayout8"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:background="#ff0000"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_marginBottom="520dp" >
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="New Text"
+            android:textColor="@color/text"
+            android:textSize="@dimen/h1"
+            android:shadowColor="#333333"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout9"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:background="#002fff"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="480dp">
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:textColor="@color/text"
+            android:textSize="@dimen/h2"
+            android:shadowColor="#333333"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp" />
+    </LinearLayout>
+
 </RelativeLayout>
