--- a/app/src/main/res/layout/activity_range.xml
+++ b/app/src/main/res/layout/activity_range.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.DistrictActivity"
-    android:background="@drawable/beerza">
+    android:background="@drawable/beerza"
+    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.DistrictActivity">
 
 
     <LinearLayout
@@ -18,19 +18,19 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="RANGE"
-            android:id="@+id/textView7"
-            android:textSize="@dimen/h1"
-
             android:layout_centerHorizontal="true"
-            android:textColor="@color/text"
+            android:layout_marginTop="5dp"
+
             android:shadowColor="#333333"
             android:shadowDx="3"
             android:shadowDy="2"
             android:shadowRadius="1"
-            android:layout_marginTop="5dp" />
+            android:text="RANGE"
+            android:textColor="@color/text"
+            android:textSize="@dimen/h1" />
     </LinearLayout>
 
     <LinearLayout
@@ -38,39 +38,39 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="80dp"
         android:background="#70ffffff"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp" >
+        android:padding="20dp">
 
         <ImageView
+            android:id="@+id/imageView4"
             android:layout_width="192dp"
             android:layout_height="192dp"
-            android:id="@+id/imageView4"
             android:src="@drawable/visa" />
 
         <RatingBar
+            android:id="@+id/ratingBar2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ratingBar2"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"/>
 
         <Button
+            android:id="@+id/button6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="EXIT"
-            android:id="@+id/button6"
             android:layout_alignParentBottom="true"
-            android:onClick="clickSignUpSign"
-            android:background="@drawable/button_shape1"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textColor="#ffffff"
-            android:layout_marginTop="40dp" />
+            android:layout_marginTop="40dp"
+            android:background="@drawable/button_shape1"
+            android:onClick="clickSignUpSign"
+            android:text="EXIT"
+            android:textColor="#ffffff" />
 
     </LinearLayout>
 
