--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -18,11 +18,11 @@
             android:background="#ffffff">
 
             <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
                 android:id="@+id/imageView3"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="90dp" />
+                android:layout_marginTop="90dp"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:id="@+id/textView11"
