--- a/app/src/main/res/layout/activity_interdis.xml
+++ b/app/src/main/res/layout/activity_interdis.xml
@@ -82,6 +82,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/imageView12" />
+
                     <TextView
                         android:id="@+id/call"
                         android:layout_width="match_parent"
