--- a/app/src/main/res/layout/activity_reporttitel.xml
+++ b/app/src/main/res/layout/activity_reporttitel.xml
@@ -60,6 +60,19 @@
                     android:shadowRadius="1"
                     android:layout_weight="7.21" />
 
+                <TextView
+                    android:id="@+id/from"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Form"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/h1"
+                    android:shadowColor="#333333"
+                    android:shadowDx="3"
+                    android:shadowDy="2"
+                    android:shadowRadius="1" />
+
             </LinearLayout>
         </ScrollView>
 
@@ -77,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Reporttitel"
+                android:text="Reporttite"
                 android:textColor="@color/text"
                 android:textSize="@dimen/h1"
                 android:shadowColor="#333333"
@@ -89,7 +102,7 @@
         <LinearLayout
             android:id="@+id/linearLayout24"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:background="#80caa6"
             android:gravity="center_horizontal"
@@ -106,6 +119,7 @@
                 android:shadowColor="#333333"
                 android:shadowDx="3"
                 android:shadowDy="2"
+                android:layout_margin="10dp"
                 android:shadowRadius="1"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp" />
